# excel-agent

./: pyproject.toml  ruff.toml
src/excel_agent/: __init__.py  add_next_month.py  log_expense.py  main.py
