[project]
name = "excel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
]

[project.scripts]
excel-agent = "excel_agent:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
]
